@@ -48,6 +48,13 @@ class BaseTest(unittest.TestCase):
     TEXT = b''.join(TEXT_LINES)
     DATA = b'BZh91AY&SY.\xc8N\x18\x00\x01>_\x80\x00\x10@\x02\xff\xf0\x01\x07n\x00?\xe7\xff\xe00\x01\x99\xaa\x00\xc0\x03F\x86\x8c#&\x83F\x9a\x03\x06\xa6\xd0\xa6\x93M\x0fQ\xa7\xa8\x06\x804hh\x12$\x11\xa4i4\xf14S\xd2<Q\xb5\x0fH\xd3\xd4\xdd\xd5\x87\xbb\xf8\x94\r\x8f\xafI\x12\xe1\xc9\xf8/E\x00pu\x89\x12]\xc9\xbbDL\nQ\x0e\t1\x12\xdf\xa0\xc0\x97\xac2O9\x89\x13\x94\x0e\x1c7\x0ed\x95I\x0c\xaaJ\xa4\x18L\x10\x05#\x9c\xaf\xba\xbc/\x97\x8a#C\xc8\xe1\x8cW\xf9\xe2\xd0\xd6M\xa7\x8bXa<e\x84t\xcbL\xb3\xa7\xd9\xcd\xd1\xcb\x84.\xaf\xb3\xab\xab\xad`n}\xa0lh\tE,\x8eZ\x15\x17VH>\x88\xe5\xcd9gd6\x0b\n\xe9\x9b\xd5\x8a\x99\xf7\x08.K\x8ev\xfb\xf7xw\xbb\xdf\xa1\x92\xf1\xdd|/";\xa2\xba\x9f\xd5\xb1#A\xb6\xf6\xb3o\xc9\xc5y\\\xebO\xe7\x85\x9a\xbc\xb6f8\x952\xd5\xd7"%\x89>V,\xf7\xa6z\xe2\x9f\xa3\xdf\x11\x11"\xd6E)I\xa9\x13^\xca\xf3r\xd0\x03U\x922\xf26\xec\xb6\xed\x8b\xc3U\x13\x9d\xc5\x170\xa4\xfa^\x92\xacDF\x8a\x97\xd6\x19\xfe\xdd\xb8\xbd\x1a\x9a\x19\xa3\x80ankR\x8b\xe5\xd83]\xa9\xc6\x08\x82f\xf6\xb9"6l$\xb8j@\xc0\x8a\xb0l1..\xbak\x83ls\x15\xbc\xf4\xc1\x13\xbe\xf8E\xb8\x9d\r\xa8\x9dk\x84\xd3n\xfa\xacQ\x07\xb1%y\xaav\xb4\x08\xe0z\x1b\x16\xf5\x04\xe9\xcc\xb9\x08z\x1en7.G\xfc]\xc9\x14\xe1B@\xbb!8`'
 
+    def setUp(self):
+        self.filename = TESTFN
+
+    def tearDown(self):
+        if os.path.isfile(self.filename):
+            os.unlink(self.filename)
+
     if has_cmdline_bunzip2:
         def decompress(self, data):
             pop = subprocess.Popen("bunzip2", shell=True,
@@ -69,13 +76,6 @@ class BaseTest(unittest.TestCase):
 
 class BZ2FileTest(BaseTest):
     "Test BZ2File type miscellaneous methods."
-
-    def setUp(self):
-        self.filename = TESTFN
-
-    def tearDown(self):
-        if os.path.isfile(self.filename):
-            os.unlink(self.filename)
 
     def createTempFile(self, streams=1):
         with open(self.filename, "wb") as f:
@@ -650,9 +650,7 @@ class BZ2DecompressorTest(BaseTest):
             decompressed = None
 
 
-class FuncTest(BaseTest):
-    "Test module functions"
-
+class CompressDecompressTest(BaseTest):
     def testCompress(self):
         data = bz2.compress(self.TEXT)
         self.assertEqual(self.decompress(data), self.TEXT)
@@ -672,12 +670,109 @@ class FuncTest(BaseTest):
         text = bz2.decompress(self.DATA * 5)
         self.assertEqual(text, self.TEXT * 5)
 
+
+class OpenTest(BaseTest):
+    def test_binary_modes(self):
+        with bz2.open(self.filename, "wb") as f:
+            f.write(self.TEXT)
+        with open(self.filename, "rb") as f:
+            file_data = bz2.decompress(f.read())
+            self.assertEqual(file_data, self.TEXT)
+        with bz2.open(self.filename, "rb") as f:
+            self.assertEqual(f.read(), self.TEXT)
+        with bz2.open(self.filename, "ab") as f:
+            f.write(self.TEXT)
+        with open(self.filename, "rb") as f:
+            file_data = bz2.decompress(f.read())
+            self.assertEqual(file_data, self.TEXT * 2)
+
+    def test_implicit_binary_modes(self):
+        # Test implicit binary modes (no "b" or "t" in mode string).
+        with bz2.open(self.filename, "w") as f:
+            f.write(self.TEXT)
+        with open(self.filename, "rb") as f:
+            file_data = bz2.decompress(f.read())
+            self.assertEqual(file_data, self.TEXT)
+        with bz2.open(self.filename, "r") as f:
+            self.assertEqual(f.read(), self.TEXT)
+        with bz2.open(self.filename, "a") as f:
+            f.write(self.TEXT)
+        with open(self.filename, "rb") as f:
+            file_data = bz2.decompress(f.read())
+            self.assertEqual(file_data, self.TEXT * 2)
+
+    def test_text_modes(self):
+        text = self.TEXT.decode("ascii")
+        text_native_eol = text.replace("\n", os.linesep)
+        with bz2.open(self.filename, "wt") as f:
+            f.write(text)
+        with open(self.filename, "rb") as f:
+            file_data = bz2.decompress(f.read()).decode("ascii")
+            self.assertEqual(file_data, text_native_eol)
+        with bz2.open(self.filename, "rt") as f:
+            self.assertEqual(f.read(), text)
+        with bz2.open(self.filename, "at") as f:
+            f.write(text)
+        with open(self.filename, "rb") as f:
+            file_data = bz2.decompress(f.read()).decode("ascii")
+            self.assertEqual(file_data, text_native_eol * 2)
+
+    def test_fileobj(self):
+        with bz2.open(BytesIO(self.DATA), "r") as f:
+            self.assertEqual(f.read(), self.TEXT)
+        with bz2.open(BytesIO(self.DATA), "rb") as f:
+            self.assertEqual(f.read(), self.TEXT)
+        text = self.TEXT.decode("ascii")
+        with bz2.open(BytesIO(self.DATA), "rt") as f:
+            self.assertEqual(f.read(), text)
+
+    def test_bad_params(self):
+        # Test invalid parameter combinations.
+        with self.assertRaises(ValueError):
+            bz2.open(self.filename, "wbt")
+        with self.assertRaises(ValueError):
+            bz2.open(self.filename, "rb", encoding="utf-8")
+        with self.assertRaises(ValueError):
+            bz2.open(self.filename, "rb", errors="ignore")
+        with self.assertRaises(ValueError):
+            bz2.open(self.filename, "rb", newline="\n")
+
+    def test_encoding(self):
+        # Test non-default encoding.
+        text = self.TEXT.decode("ascii")
+        text_native_eol = text.replace("\n", os.linesep)
+        with bz2.open(self.filename, "wt", encoding="utf-16-le") as f:
+            f.write(text)
+        with open(self.filename, "rb") as f:
+            file_data = bz2.decompress(f.read()).decode("utf-16-le")
+            self.assertEqual(file_data, text_native_eol)
+        with bz2.open(self.filename, "rt", encoding="utf-16-le") as f:
+            self.assertEqual(f.read(), text)
+
+    def test_encoding_error_handler(self):
+        # Test with non-default encoding error handler.
+        with bz2.open(self.filename, "wb") as f:
+            f.write(b"foo\xffbar")
+        with bz2.open(self.filename, "rt", encoding="ascii", errors="ignore") \
+                as f:
+            self.assertEqual(f.read(), "foobar")
+
+    def test_newline(self):
+        # Test with explicit newline (universal newline mode disabled).
+        text = self.TEXT.decode("ascii")
+        with bz2.open(self.filename, "wt", newline="\n") as f:
+            f.write(text)
+        with bz2.open(self.filename, "rt", newline="\r") as f:
+            self.assertEqual(f.readlines(), [text])
+
+
 def test_main():
     support.run_unittest(
         BZ2FileTest,
         BZ2CompressorTest,
         BZ2DecompressorTest,
-        FuncTest
+        CompressDecompressTest,
+        OpenTest,
     )
     support.reap_children()
 
